# ue4ss_installer_gui

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  settings.toml  sitemap.xml
.github/workflows/: dev_releases.yml  main_releases.yml
api/: index.html
assets/: to_do_list.txt
assets/base/assets/localization/: de.json  en.json  es.json  fr.json  ja.json  ua.json  zh_cn.json  zh_hant.json
assets/research/: mods.json
blog/: index.html
community/: index.html
docs/: index.md
faq/: index.html
getting_started/: index.html
how_to/: index.html
projects/: index.html
reference/: index.html
requirements/: requirements-dev.txt
search/: search_index.json
setup/: index.html
src/galena/: __main__.py  main.py
src/ue4ss_installer/: __main__.py  add_game_screen.py  constants.py  data_structures.py  epic.py  file_io.py  logger.py  main.py  main_screen.py  settings.py  settings.toml  steam.py  unreal_engine.py  web.py
src/ue4ss_installer_gui/: __main__.py  __main__.pyw  add_game_screen.py  auto_align.py  configure_game_screen.py  constants.py  data_structures.py  epic.py  file_io.py  font.py  grid.py  initialization.py  logger.py  main.py  main_screen.py  notification_modal.py  settings.py  settings.toml  steam.py  theme_management.py  translator.py  ue4ss.py  unreal.py  unreal_engine.py
src/ue4ss_installer_gui/assets/localization/: de.json  en.json  fr.json  ja.json  ua.json  zh_cn.json
src/ue4ss_installer_gui/checks/: online_check.py
src/ue4ss_installer_gui/screens/: add_game.py  basic_screen.py  bp_mod_loader_configurator.py  configure_game.py  developer_screen.py  main.py  main.pyw  main_screen.py  main_settings_screen.py  main_ue4ss_screen.py  notification_screen.py  scanning_for_games.py  setup_screen.py  text_editor_screen.py  ue4ss_mods_configurator.py  ue4ss_settings_configurator.py
src/ue4ss_installer_gui/themes/: dark.py  default.py  dracula.py  grey.py  halloween.py  jaguar.py  light.py  retro.py  tokyo_night.py  tokyo_night_dark.py
src/ue4ss_installer_gui/widgets/: add_game.py  centered_text.py  configure_game.py  main_screen.py
to_do_lists/main/: index.html
tutorials/: index.html
