[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ue4ss_installer_gui"
version = "3.0.1-dev.15475241930"
description = "GUI installer for UE4SS"
readme = "README.md"
requires-python = ">=3.9.1"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Mythical", email = "MythicalData@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "tomlkit",
  "dearpygui",
  "requests",
  "screeninfo",
  "platformdirs"
]

[tool.hatch.envs.dev]
dependencies = [
  "pre-commit",
  "commitizen",
  "py_project_dev_tools @ git+https://github.com/Mythical-Github/py_project_dev_tools"
]

[project.urls]
Documentation = "https://github.com/Mythical-Github/ue4ss_installer_gui/blob/main/README.md"
Issues = "https://github.com/Mythical-Github/ue4ss_installer_gui/issues"
Source = "https://github.com/Mythical-Github/ue4ss_installer_gui"

[project.scripts]
ue4ss_installer_gui = "ue4ss_installer_gui.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.env]
requires = ["hatch-pip-compile"]

[tool.hatch.envs.default]
type = "pip-compile"
path = ".venv"
pip-compile-resolver = "uv"
pip-compile-installer = "uv"

[tool.hatch.envs.build]
template = "build"
installer = "uv"
dependencies = [
  "pyinstaller",
]

[tool.hatch.envs.build.scripts]
exe = [
  "pyinstaller --noconfirm --onefile --console --name ue4ss_installer_gui --icon=assets/images/project_main_icon.ico src/ue4ss_installer_gui/__main__.pyw"
]

[tool.hatch.envs.scripts]
template = "scripts"
detached = true
installer = "uv"

[tool.hatch.envs.scripts.scripts]
clean = "git clean -d -X --force"
refresh-deps = [
  "hatch env remove default",
  "python -c \"import os; os.remove('requirements.txt')\"",
  "hatch env create default",
]

[tool.pyright]
extraPaths = [".venv/Lib/site-packages"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.hatch.envs.x86_64-pc-windows-msvc]
dependencies = [
  "py_project_dev_tools @ git+https://github.com/Mythical-Github/py_project_dev_tools"
]

[tool.hatch.envs.x86_64-unknown-linux-gnu]
dependencies = [
  "py_project_dev_tools @ git+https://github.com/Mythical-Github/py_project_dev_tools"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ue4ss_installer_gui"]

[tool.typos]
[tool.typos.default]
extend-words = { ue4ss = "ue4ss", ue = "ue" }
